--- a/Pandas/Project/Read.ipynb
+++ b/Pandas/Project/Read.ipynb
@@ -36,6 +36,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "34160f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql\n",
+    "pymysql.install_as_MySQLdb()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "9c0b4ce8",
    "metadata": {},
